--- a/styles.css
+++ b/styles.css
@@ -18,3 +18,29 @@ button:active {
 	box-shadow: 0 5px #666;
 	transform: translateY(4px);
 }
+
+.button-container {
+	flex: 1;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 10px;
+}
+
+.container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	gap: 20px;
+}
+
+body {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+html, body {
+	height: 100%;
+}
